--- a/src/pages/contact/index.scss
+++ b/src/pages/contact/index.scss
@@ -163,6 +163,7 @@
                     gap: 4px;
                     .group-textarea-noti {
                         .noti {
+                            transform: translateY(-3px);
                             margin: 0;
                         }
                         textarea {
@@ -323,6 +324,11 @@
                     p {
                         color: #fff;
                     }
+                    .noti {
+                        font-size: 12px;
+                        line-height: 12px;
+                        margin-top: 4px;
+                    }
                     .title {
                         color: #fff;
                         font-size: 36px;
@@ -394,7 +400,7 @@
             }
         }
         .cluster-faqs {
-            padding: 0 16px 24px;
+            padding: 0 16px 48px;
             .title {
                 margin-top: 24px;
                 font-size: 30px;
@@ -404,6 +410,7 @@
             }
 
             .faqs-form {
+                margin-top: 16px;
                 .item-faq {
                     p {
                         font-size: 24px;
