--- a/src/components/header/HeaderV4.scss
+++ b/src/components/header/HeaderV4.scss
@@ -57,6 +57,15 @@
         }
     }
     @media screen and (max-width: 768px) {
+        .header-v4 {
+            height: 52px;
+            .logo-header-v4 {
+                img {
+                    width: 139px;
+                    height: 42px;
+                }
+            }
+        }
         .cluster-right-header {
             gap: 12px !important;
             .login-header {
