--- a/src/container/about-container/AboutLayout.scss
+++ b/src/container/about-container/AboutLayout.scss
@@ -6,7 +6,7 @@
         margin: 0;
     }
     .background-about-page {
-        background-image: url("public/images/about/background-about-page.png");
+        // background-image: url("public/images/about/background-about-page.png");
         background-size: cover;
         background-position: 40%;
         flex-direction: column;
