--- a/src/container/about-us/index.scss
+++ b/src/container/about-us/index.scss
@@ -138,6 +138,8 @@
                     font-weight: 400;
                     line-height: 24px;
                     text-align: center;
+                    text-underline-position: from-font;
+                    color: #212121cc;
                 }
             }
             .intro-1 {
@@ -163,7 +165,7 @@
             display: flex;
             gap: 40px;
             width: 100%;
-            margin-top: 86px;
+            margin-top: 74px;
             margin-bottom: 120px;
             align-items: center;
             flex-direction: column;
