fix line about us

--- a/src/container/about-us/index.scss
+++ b/src/container/about-us/index.scss
@@ -95,7 +95,7 @@
             align-items: center;
             justify-content: center;
             gap: 56px;
-            margin: 84px 0;
+            margin: 78px 0;
             // position: relative;
             // img {
             //     position: absolute;
@@ -111,11 +111,12 @@
                 max-width: 335px;
                 gap: 16px;
                 background-color: #e5e8fe;
-                border-radius: 48px;
+                border-radius: 66px;
                 position: relative;
 
                 img {
                     position: absolute;
+                    width: 413px;
                 }
                 svg {
                     width: 120px;
@@ -143,21 +144,23 @@
                 }
             }
             .intro-1 {
+                transform: translateX(+5px);
+
                 img {
-                    top: -36px;
+                    top: -31px;
                 }
             }
             .intro-2 {
                 max-width: 335px;
-
-                transform: translateY(+80px);
+                transform: translateY(+45px);
                 img {
-                    bottom: -36px;
+                    bottom: -31px;
                 }
             }
             .intro-3 {
+                transform: translateX(-5px);
                 img {
-                    top: -36px;
+                    top: -31px;
                 }
             }
         }
@@ -165,7 +168,7 @@
             display: flex;
             gap: 40px;
             width: 100%;
-            margin-top: 62px;
+            margin-top: 44px;
             margin-bottom: 120px;
             align-items: center;
             flex-direction: column;
