--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -111,7 +111,7 @@
 *,
 ::before,
 ::after {
-    /* box-sizing: border-box;  */
+    box-sizing: border-box;
     border-width: 0;
     border-style: solid;
     border-color: #e5e7eb;
@@ -210,6 +210,9 @@ pre {
 .bottom-2 {
     bottom: 0.5rem;
 }
+.-bottom-1 {
+    bottom: -0.25rem;
+}
 .left-0 {
     left: 0px;
 }
@@ -218,6 +221,9 @@ pre {
 }
 .top-0 {
     top: 0px;
+}
+.top-1 {
+    top: 0.25rem;
 }
 .z-0 {
     z-index: 0;
@@ -229,6 +235,9 @@ pre {
     z-index: 20;
 }
 .m-\[0\] {
+    margin: 0;
+}
+.m-0 {
     margin: 0;
 }
 .mb-\[19px\] {
@@ -510,6 +519,10 @@ pre {
     padding-left: 1rem;
     padding-right: 1rem;
 }
+.px-1 {
+    padding-left: 0.25rem;
+    padding-right: 0.25rem;
+}
 .px-6 {
     padding-left: 1.5rem;
     padding-right: 1.5rem;
@@ -555,8 +568,17 @@ pre {
 .pb-\[48px\] {
     padding-bottom: 48px;
 }
+.pl-1 {
+    padding-left: 0.25rem;
+}
+.pl-2 {
+    padding-left: 0.5rem;
+}
 .pl-6 {
     padding-left: 1.5rem;
+}
+.pt-6 {
+    padding-top: 1.5rem;
 }
 .pl-\[80px\] {
     padding-left: 80px;
@@ -564,11 +586,18 @@ pre {
 .pr-\[80px\] {
     padding-right: 80px;
 }
+.pr-0 {
+    padding-right: 0;
+}
 .pt-2 {
     padding-top: 0.5rem;
 }
 .pt-3 {
     padding-top: 0.75rem;
+}
+.py-3 {
+    padding-top: 0.75rem;
+    padding-bottom: 0.75rem;
 }
 .pt-4 {
     padding-top: 1rem;
@@ -584,6 +613,9 @@ pre {
 }
 .font-poppins {
     font-family: var(--font-poppins);
+}
+.text-inherit {
+    color: inherit;
 }
 .text-2xl {
     font-size: 1.5rem;
@@ -800,15 +832,27 @@ pre {
     .sm\:aspect-video {
         aspect-ratio: 16 / 9;
     }
-
+    .sm\:py-4 {
+        padding-top: 1rem;
+        padding-bottom: 1rem;
+    }
     .sm\:h-16 {
         height: 4rem;
+    }
+    .sm\:pr-0 {
+        padding-right: 0;
     }
 
     .sm\:h-6 {
         height: 1.5rem;
     }
-
+    .sm\:py-6 {
+        padding-top: 1.5rem;
+        padding-bottom: 1.5rem;
+    }
+    .sm\:pl-6 {
+        padding-left: 1.5rem;
+    }
     .sm\:h-\[325px\] {
         height: 325px;
     }
@@ -817,8 +861,8 @@ pre {
         width: 4rem;
     }
 
-    .sm\:w-\[440px\] {
-        width: 440px;
+    .sm\:w-\[400px\] {
+        width: 400px;
     }
 
     .sm\:w-fit {
@@ -920,7 +964,9 @@ pre {
     .sm\:pt-6 {
         padding-top: 1.5rem;
     }
-
+    .sm\:pt-12 {
+        padding-top: 3rem;
+    }
     .sm\:text-start {
         text-align: start;
     }
@@ -961,7 +1007,12 @@ pre {
         font-size: 1.25rem;
         line-height: 1.75rem;
     }
-
+    .sm\:font-normal {
+        font-weight: 400;
+    }
+    .sm\:font-medium {
+        font-weight: 500;
+    }
     .sm\:font-semibold {
         font-weight: 600;
     }
