--- a/src/components/404/index.css
+++ b/src/components/404/index.css
@@ -1,110 +1,109 @@
 .page-404-container {
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
-  width: 100vw;
-  height: 100vh;
-  display: flex;
-  align-items: end;
-  justify-content: center;
-  gap: 149px;
-  box-sizing: border-box;
-  padding: 0 80px;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    align-items: end;
+    justify-content: center;
+    gap: 149px;
+    /* padding: 0 80px; */
 }
 @media screen and (max-width: 768px) {
-  .page-404-container {
-    height: calc(100svh - 52px);
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
-    gap: 32px;
-    padding: 0 16px;
-  }
+    .page-404-container {
+        height: calc(100svh - 52px);
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-between;
+        gap: 32px;
+        padding: 0 16px;
+    }
 }
 .page-404-container .main-page {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
 }
 .page-404-container .main-page .number404 {
-  margin-bottom: 36px;
-  width: 499px;
-  height: 227px;
+    margin-bottom: 36px;
+    width: 499px;
+    height: 227px;
 }
 @media screen and (max-width: 768px) {
-  .page-404-container .main-page .number404 {
-    margin-bottom: 24px;
-    width: 287px;
-    height: 131px;
-  }
+    .page-404-container .main-page .number404 {
+        margin-bottom: 24px;
+        width: 287px;
+        height: 131px;
+    }
 }
 .page-404-container .main-page .page-not-found-text {
-  font-size: 48px;
-  font-weight: 600;
-  line-height: 72px;
-  color: #e0a859;
-  margin-bottom: 16px;
+    font-size: 48px;
+    font-weight: 600;
+    line-height: 72px;
+    color: #e0a859;
+    margin-bottom: 16px;
 }
 @media screen and (max-width: 768px) {
-  .page-404-container .main-page .page-not-found-text {
-    font-size: 24px;
-    font-weight: 600;
-    line-height: 36px;
-    color: #e0a859;
-    margin-bottom: 8px;
-  }
+    .page-404-container .main-page .page-not-found-text {
+        font-size: 24px;
+        font-weight: 600;
+        line-height: 36px;
+        color: #e0a859;
+        margin-bottom: 8px;
+    }
 }
 .page-404-container .main-page .sorry-text {
-  font-size: 24px;
-  font-weight: 400;
-  line-height: 36px;
-  color: #212121 85;
-  margin-bottom: 24px;
+    font-size: 24px;
+    font-weight: 400;
+    line-height: 36px;
+    color: #212121 85;
+    margin-bottom: 24px;
 }
 @media screen and (max-width: 768px) {
-  .page-404-container .main-page .sorry-text {
-    font-size: 14px;
-    font-weight: 400;
-    line-height: 21px;
-    color: #212121 85;
-    margin-bottom: 16px;
-  }
+    .page-404-container .main-page .sorry-text {
+        font-size: 14px;
+        font-weight: 400;
+        line-height: 21px;
+        color: #212121 85;
+        margin-bottom: 16px;
+    }
 }
 .page-404-container .main-page .button-back {
-  text-decoration: none;
-  margin-bottom: 124px;
-  border-radius: 999px;
-  border-bottom: 1.5px solid #8c6938;
-  background-color: #e0a859;
-  width: 185px;
-  height: 48px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 16px;
-  font-weight: 600;
-  line-height: 24px;
-  color: #fff;
-  cursor: pointer;
-  transition: all 0.3s ease;
+    text-decoration: none;
+    margin-bottom: 124px;
+    border-radius: 999px;
+    border-bottom: 1.5px solid #8c6938;
+    background-color: #e0a859;
+    width: 185px;
+    height: 48px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 16px;
+    font-weight: 600;
+    line-height: 24px;
+    color: #fff;
+    cursor: pointer;
+    transition: all 0.3s ease;
 }
 @media screen and (max-width: 768px) {
-  .page-404-container .main-page .button-back {
-    margin-bottom: 0;
-  }
+    .page-404-container .main-page .button-back {
+        margin-bottom: 0;
+    }
 }
 .page-404-container .main-page .button-back:hover {
-  transform: translateY(-3px);
+    transform: translateY(-3px);
 }
 .page-404-container .soldier {
-  width: 508px;
-  height: 657px;
+    width: 508px;
+    height: 657px;
 }
 @media screen and (max-width: 768px) {
-  .page-404-container .soldier {
-    width: 192px;
-    height: 246px;
-  }
+    .page-404-container .soldier {
+        width: 192px;
+        height: 246px;
+    }
 }
