--- a/src/components/header/HeaderV4.scss
+++ b/src/components/header/HeaderV4.scss
@@ -1,13 +1,18 @@
 .container-header-v4 {
     background: #fff;
     border-bottom: 1px solid #e4e4e4;
+    width: 100%;
+    display: flex;
+    justify-content: center;
     .header-v4 {
+        width: 100%;
         position: relative;
         height: 56px;
         display: flex;
         justify-content: space-between;
         align-items: center;
         .logo-header-v4 {
+            transform: translateX(-4px);
             position: relative;
             img {
                 height: 48px; //1:4
@@ -42,8 +47,10 @@
             justify-content: flex-end;
             width: fit-content;
             text-decoration-color: #343f82;
-
             margin-left: auto;
+            .text-nemu {
+                color: #21212185;
+            }
             span {
                 color: #343f82;
                 display: block;
@@ -51,6 +58,7 @@
             }
         }
         .login-header {
+            color: #21212185;
             cursor: pointer;
             display: flex;
             align-items: center;
@@ -59,6 +67,7 @@
     @media screen and (max-width: 768px) {
         .header-v4 {
             height: 52px;
+            padding: 0 16px;
             .logo-header-v4 {
                 img {
                     width: 139px;
