--- a/src/pages/contact/index.scss
+++ b/src/pages/contact/index.scss
@@ -65,6 +65,7 @@
                     .cluster-email {
                         display: flex;
                         gap: 16px;
+                        cursor: pointer;
                         margin-top: 24px;
                     }
 
