--- a/src/components/footer/FooterLandingV4.scss
+++ b/src/components/footer/FooterLandingV4.scss
@@ -108,6 +108,7 @@
                 .cluster-email {
                     display: flex;
                     align-items: center;
+                    cursor: pointer;
                     gap: 12px;
                 }
                 .cluster-location {
