--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -219,6 +219,9 @@ pre {
 .right-0 {
     right: 0px;
 }
+.pl-0\.5 {
+    padding-left: 2px;
+}
 .top-0 {
     top: 0px;
 }
@@ -450,6 +453,9 @@ pre {
 .rounded-\[8px\] {
     border-radius: 8px;
 }
+.max-h-12 {
+    max-height: 48px;
+}
 .rounded-full {
     border-radius: 9999px;
 }
@@ -546,6 +552,10 @@ pre {
 .py-2 {
     padding-top: 0.5rem;
     padding-bottom: 0.5rem;
+}
+.py-3 {
+    padding-top: 0.75rem;
+    padding-bottom: 0.75rem;
 }
 .py-4 {
     padding-top: 1rem;
@@ -748,6 +758,9 @@ pre {
     filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert)
         var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
+.pl-4 {
+    padding-left: 1rem;
+}
 .transition {
     transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow,
         transform, filter, backdrop-filter;
@@ -836,6 +849,9 @@ pre {
         padding-top: 1rem;
         padding-bottom: 1rem;
     }
+    .sm\:pr-6 {
+        padding-right: 1.5rem;
+    }
     .sm\:h-16 {
         height: 4rem;
     }
@@ -907,6 +923,9 @@ pre {
 
     .sm\:gap-8 {
         gap: 2rem;
+    }
+    .sm\:gap-\[10px\] {
+        gap: 10px;
     }
 
     .sm\:whitespace-normal {
