--- a/src/components/parent-app/passemail/ParentAppLayoutV0.scss
+++ b/src/components/parent-app/passemail/ParentAppLayoutV0.scss
@@ -2,5 +2,7 @@
     display: flex;
     flex-direction: column;
     background-color: rgba(255, 255, 255, 1);
-    overflow-x: hidden;
+    width: 100vw;
+    height: 100vh;
+    overflow-y: scroll;
 }
