--- a/src/components/footer/FooterLandingV4.scss
+++ b/src/components/footer/FooterLandingV4.scss
@@ -3,7 +3,7 @@
     // height: 600px;
     // overflow: hidden;
     width: 100%;
-    background: #343f82;
+    background: var(--main-color);
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -187,112 +187,6 @@
                 }
             }
         }
-
-        // .v4-footer-landing-container-11 {
-        //     .v4-footer-landing-container-111 {
-        //         display: flex;
-        //         justify-content: space-between;
-        //         align-items: center;
-        //         .v4-contact-social-desktop {
-        //             display: none;
-        //         }
-        //         .logo-footer-v4 {
-        //             display: flex;
-        //         }
-        //         .img-logo-footer {
-        //             height: 40px; //1:4
-        //             max-width: 160px;
-        //         }
-        //     }
-
-        //     .v4-footer-landing-container-112 {
-        //         display: flex;
-        //         flex-direction: column;
-        //         padding-top: 32px;
-        //         > div {
-        //             color: #fff !important;
-        //             margin-bottom: 16px;
-        //             font-size: 18px;
-        //             font-weight: 500;
-        //             text-align: center;
-        //             line-height: 28px;
-        //         }
-        //         .v4-input-field {
-        //             margin: 4px 0;
-        //             input {
-        //                 color: #fff;
-        //                 padding: 10px;
-        //                 border: 1px solid #fff;
-        //                 border-radius: 6px;
-        //                 box-sizing: border-box;
-        //                 outline: none;
-        //                 background-color: transparent;
-        //                 width: -webkit-fill-available;
-        //                 &::placeholder {
-        //                     color: #fff;
-        //                 }
-        //                 &:-ms-input-placeholder {
-        //                     /* Internet Explorer 10-11 */
-        //                     color: #fff;
-        //                 }
-        //                 &::-ms-input-placeholder {
-        //                     /* Microsoft Edge */
-        //                     color: #fff;
-        //                 }
-        //                 &:focus {
-        //                     border: 1px solid #fff;
-        //                 }
-        //             }
-        //             p {
-        //                 color: #880000; //alert text
-        //                 margin: 0;
-        //                 font-size: 14px;
-        //                 text-align: left;
-        //                 padding-left: 4px;
-        //             }
-        //         }
-
-        //         .v4-footer-btn-contact-us {
-        //             padding: 12px 20px;
-        //             background-color: #fff;
-        //             width: fit-content;
-        //             align-self: flex-end;
-        //             cursor: pointer;
-        //             margin-top: 4px;
-        //             font-size: 14px;
-        //             border: none;
-        //             display: flex;
-        //             line-height: 24px; // = svg height
-        //         }
-        //     }
-        // }
-
-        // .v4-footer-landing-container-12 {
-        //     padding-top: 32px;
-        //     border-top: 1px solid #e4e4e4;
-        //     display: flex;
-        //     margin-top: 16px;
-        //     justify-content: space-between;
-        //     flex-direction: column;
-        //     align-items: center;
-
-        //     .v4-footer-landing-container-121 {
-        //         padding-top: 32px;
-        //         a {
-        //             text-decoration: none;
-        //             color: #fff;
-        //             font-size: 14px;
-        //         }
-        //         a:not(:first-child) {
-        //             margin-left: 32px;
-        //         }
-        //     }
-        //     .v4-footer-landing-container-122 {
-        //         color: rgb(230, 230, 230);
-        //         font-size: 12px;
-        //         padding-top: 16px;
-        //     }
-        // }
     }
 
     .v4-footer-landing-container-1 {
@@ -300,7 +194,7 @@
         width: 100%;
         justify-content: center;
         padding: 32px 0;
-        background-color: #181f47;
+        background-color: var(--main-color-bold);
         .footer-social {
             display: flex;
             width: 100%;
