--- a/src/css/globals.css
+++ b/src/css/globals.css
@@ -49,9 +49,21 @@ h5,
 p {
     color: var(--text-color);
 }
+@media screen and (max-width: 768px) {
+    .max-w-component-desktop {
+        max-width: 100%;
+    }
+}
+.max-w-component-desktop {
+    max-width: 1206px;
+}
+
+* {
+    font-family: "Poppins", sans-serif;
+}
 
 .max-w-page {
-    max-width: 1280px;
+    max-width: 1206px;
 }
 .text-primary {
     color: var(--text-color-primary);
