delete image big size

--- a/src/container/about-us/index.scss
+++ b/src/container/about-us/index.scss
@@ -10,7 +10,7 @@
         display: flex;
         justify-content: center;
         padding: 48px 0;
-        background-image: url(/public/images/about/about-us-img.png);
+        background-image: url(https://storage.googleapis.com/worksheetzone/CDL/images/about-us-img.png);
         background-size: cover;
         background-position: center;
         .cluster-info-title {
