--- a/src/components/about-us/index.scss
+++ b/src/components/about-us/index.scss
@@ -136,6 +136,7 @@
                 img {
                     position: absolute;
                     width: 413px;
+                    max-width: unset;
                 }
 
                 svg {
@@ -262,7 +263,7 @@
 
     @media screen and (max-width: 768px) {
         .about-us-top {
-            background-image: url(/public/images/about/about-us-img-mobile.png);
+            background-image: url(/images/about/about-us-img-mobile.png);
             padding: 30px 0 24px 0;
 
             .cluster-info-title {
