--- a/src/pages/contact/index.scss
+++ b/src/pages/contact/index.scss
@@ -284,6 +284,7 @@
                                 transition: all 0.3s ease;
                             }
                         }
+
                         span {
                             transition: all 0.3s ease;
                             width: 100%;
@@ -304,6 +305,10 @@
                             transition: all 0.65s ease;
                             visibility: hidden;
                             color: #fff;
+                            a {
+                                color: #fff;
+                                text-decoration: underline;
+                            }
                         }
                     }
                 }
